--- a/4CADs.css
+++ b/4CADs.css
@@ -2,7 +2,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    background-color: #323012;
+    padding: 0px;
+    width: 100%;
+    margin: 0px;
 }
 #logo {
     display: flex;
@@ -15,7 +18,6 @@ header {
     flex-grow: 2;
     margin: 20px;
     
-
 }
 #search-bar input {
     width: 100%;
@@ -25,14 +27,7 @@ header {
     margin-left: 10px;
 }
 #login a {
-    padding: 50px 20px;;
-}
-
-header{
-    background-color: #323012;
-    padding: 10px;
-    width: 101%;
-    margin: auto;
+    padding: 10px 10px;;
 }
 header nav ul{
     display: flex;
