--- a/4CADs.css
+++ b/4CADs.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #323012;
+}
 header {
     display: flex;
     justify-content: space-between;
@@ -41,4 +44,49 @@ header nav ul li a{
     color: white;
     text-decoration: none;
     font-size: 15px;
+}
+
+secondbody{
+    background-color: #bdbdbd;
+    
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+.container {
+    
+    gap: 150px;
+}
+
+.box {
+    background-color: #423f17;
+    padding: 20px;
+    border: 2px solid #000; 
+    border-style: ridge;
+    text-align: center;
+    font-weight: bold;
+    color: #ffffff;
+    
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 453px;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    height: 1000px;
+    border-radius: 5px;
+    font-size: 30px;
+}
+.information{
+    align-items: center;
+    background-color: #8d8d8d;
+    background-image:;
+    padding: 30px;
+    border: solid #000 2px;
+    width: 90%;
+    height: 950px;
+    border-radius:10px;
+    font-size: 20px;
+    
 }
