--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -34,7 +34,8 @@ h2 {
     border: 2px solid black;
     margin: 10px;
     display: inline-block;
-    justify-content: center;
+    text-align: center;
+    line-height: 200px;
     align-items: center;
     font-size: 14px;
     font-weight: bold;
