--- a/4CADs.css
+++ b/4CADs.css
@@ -1,3 +1,42 @@
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #ffffff;
+}
+/* Logo Styling */
+.logo img {
+    width: 50px; 
+    transition: width 0.3s ease; /* Makes resizing smoother */
+}
+.logo img:hover {
+    width: 60px; /* Logo expands on hover */
+}
+/* Search Container Styling */
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Pushes search bar to the right */
+}
+.search-bar {
+    width: 0; /* Hidden initially */
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    transition: width 0.5s ease;
+    background-color: #fff;
+}
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
+.search-icon {
+    width: 20px;
+    height: 20px;
+}
+
 body{
     background-image:URL("Images/3.svg") ;
     width: 100%
@@ -13,43 +52,6 @@ header {
     width: 100vw;
     
 }
-#logo {
-    display: flex;
-    align-items: last center;
-    
-}
-#logo img {
-    height: 70px;
-}
-#search-bar {
-    flex-grow: 2;
-    margin: 20px;
-    
-}
-#search-bar input {
-    width: 100%;
-    padding:10px;
-}
-#login {
-    margin-left: 10px;
-}
-#login a {
-    padding: 10px 10px;;
-}
-header nav ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-}
-header nav ul li{
-    margin: 20px;
-}
-header nav ul li a{
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-}
-
 .secondbody{
     background-color: #323012;
     
@@ -98,8 +100,4 @@ header nav ul li a{
     border-radius:10px;
     font-size: 20px;
     
-}
-.navoptions{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: medium;
 }
