--- a/4CADs.css
+++ b/4CADs.css
@@ -52,9 +52,16 @@ header {
     width: 100vw;
     
 }
+.title{
+    color: #525252;
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .secondbody{
     background-color: #323012;
-    
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: auto;
@@ -62,9 +69,10 @@ header {
 }
 .container {
     
-    gap: 20px;
     display: flex;
     /*width: 100%;*/
+    gap: 50px;
+    margin-top: 35px;
     
 }
 
@@ -77,18 +85,16 @@ header {
     text-align: center;
     font-weight: bold;
     color: #ffffff;
-    margin: 10px;
+    /*margin: 10px;*/
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-    width: 150%;
-    display: inline-block;
-    justify-content: center;
+    width: 400px;
     align-items: center;
-    height: auto;
+    height: 400px;
     border-radius: 5px;
-    font-size: 30px;
+    font-size: 20px;
 }
-.information{
+/*.information{
     align-items: center;
     background-color: #8d8d8d;
     background-image: url("Images/4CADs\ homepage\ image.png");
@@ -100,4 +106,34 @@ header {
     border-radius:10px;
     font-size: 20px;
     
+}*/
+
+.paragraph {
+    margin-top: 30px;
+    width: 80%;
+    text-align: center;
+    color: #525252;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    padding-top: 30px;
+}
+
+footer {
+    background-color: #000000;
+    padding: 15px;
+    display: flex;
+    text-align: right;
+    color: rgb(255, 255, 255);
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    width: 100%;
+    margin-top: 30px;
+    justify-content: space-between;
+    margin-left: 20px;
+}
+
+.ParaImage{
+    display: flex; 
+    height: 50px;
+    gap: 30px;
 }
