--- a/4CADs.css
+++ b/4CADs.css
@@ -74,8 +74,9 @@ header {
 }
 .title{
     color: #000000;
-    font-size:large;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: large;
+    font-family:sans-serif;
+    font-weight: 700px;
 }
 
 .secondbody{
@@ -96,22 +97,53 @@ header {
 }
 
 .box {
-    background-image: url("Images/4CADs\ homepage\ image.png");
-    background-size: cover;
+    
     padding: 20px;
-    border: 2px solid #000; 
+    border: 3px ridge #b0ae87; 
     border-style: ridge;
     text-align: center;
     font-weight: bold;
     color: #ffffff;
-    /*margin: 10px;*/
+    margin: 10px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:sans-serif;
     width: 400px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    height: 400px;
-    border-radius: 5px;
+    justify-content: center;
+    text-decoration: none;
+    transition: opacity 6s ease;
     font-size: 20px;
+    
+}
+
+.level-text{
+    transition: opacity 0.7s ease;
+}
+.level-text:hover{
+    opacity: 0;
+}
+#beginner{
+    background-image: url(/Images/Beginner.png);
+    background-size: cover;
+    height: 400px;
+    width: 400px;
+    border-radius: 5px;
+}
+#intermediate{
+    background-image: url(/Images/Intermediate.png);
+    background-size: cover;
+    height: 400px;
+    width: 400px;
+    border-radius: 5px;
+}
+#advanced{
+    background-image: url(/Images/Advanced.png);
+    background-size: cover;
+    height: 400px;
+    width: 400px;
+    border-radius: 5px;
 }
 .information{
     align-items: center;
@@ -138,11 +170,11 @@ header {
 }
 
 footer {
-    background-color: #80807b;
+    background-color: #f2f2f0;
     padding: 15px;
     display: flex;
     text-align: right;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: Arial, sans-serif;
     font-size: 16px;
     width: 100%;
@@ -155,7 +187,30 @@ footer {
     display: flex; 
     height: 50px;
     gap: 30px;
+    display: flex;
+    
+}
+.contact-pics{
+    display: flex;
+    align-items: center;
+    color: #000;
+}
+.footermage{
+    display: flex;
+    justify-content: center;
+    left: 750px;
+    top: 1610px;
+    position: absolute;
+    width: 200px;
+    object-fit: cover;
 }
 .backvideo{
     object-fit: cover;
+}
+.footer{
+    display: flex;
+    align-items: center;
+}
+a{
+    text-decoration: none;
 }
