--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -1,69 +1,22 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #d3d3d3;
-    text-align: center;
-}
-
-.container {
-    margin-top: 50px;
-}
-
-h1 {
-    font-size: 24px;
-    font-weight: bold;
-    display: inline-block;
-    border-bottom: 1px solid black;
-    margin-bottom: 5px;
-}
-
-h2 {
-    font-size: 18px;
-    font-weight: normal;
-    margin: 10px 0 30px;
-}
-
-.box-container {
-    width: 70%;
-    margin: 0 auto;
-}
-
-.box1 {
-    width: 300px;
-    height: 300px;
-    background-color: white;
-    border: 2px solid black;
-    margin: 10px;
-    display: inline-block;
-    text-align: center;
-    line-height: 200px;
-    align-items: center;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.box2 {
-    width: 300px;
-    height: 300px;
-    background-color: white;
-    border: 2px solid black;
-    margin: 10px;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    font-weight: bold;
-}
-#background{
-    display: flex;
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    top: 170px;
-}
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body {
+    font-family:sans-serif;
+    background-color: #ddd650;
+    text-align: center;
+    font-weight: bold;
+    z-index: 9;
+}
+.title{
+    font-family:sans-serif;
+    color: rgb(255, 255, 255);
+    display: flex;
+    display: inline;
+    position: relative;
+    bottom: 20px;
 }
 .navbar {
     display: flex;
@@ -72,6 +25,9 @@ h2 {
     background-color:#f2f2f0;
     width: 100%;
     height: 70px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 /* Logo Styling */
 .logo img {
@@ -120,4 +76,77 @@ h2 {
 .search-bar:focus {
     width: 700px; /* then it expans on focus, as in when clicked*/
     outline: none;
+}
+
+.container {
+    margin-top: 50px;
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+h2 {
+    font-size: 18px;
+    font-weight: normal;
+    margin-top: 5px;
+}
+
+.box-container {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.box1 {
+    padding: 20px;
+    border: 3px ridge #b0ae87; 
+    border-style: ridge;
+    position: relative;
+    top: 15px;
+    width: 400px;
+    height: 400px;
+    background-image: url();
+    margin: 10px;
+    margin-bottom: 50px;
+    display: inline-block;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: bold;
+    font-family:sans-serif;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.box2 {
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    border: 2px solid black;
+    margin: 10px;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+#background{
+    display: flex;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    top: 170px;
+    left: 0px;
+    max-height: 100%;
+    object-fit: cover;
+
 }
