--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -102,6 +102,7 @@ h2 {
 
 .CONCRETE {
     background-image: url(Concrete.jpg);
+    background-size: cover;
     width: 300px;
     height: 300px;
     background-color: white;
@@ -117,6 +118,7 @@ h2 {
 
 .STEEL {
     background-image: url(Steel.jpg);
+    background-size: cover;
     width: 300px;
     height: 300px;
     background-color: white;
@@ -132,6 +134,7 @@ h2 {
 
 .ALUMINIUM {
     background-image: url(Aluminium.jpg);
+    background-size: cover;
     width: 300px;
     height: 300px;
     background-color: white;
