--- a/4CADs.css
+++ b/4CADs.css
@@ -12,6 +12,7 @@
     height: 70px;
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 /* Logo Styling */
 .logo img {
@@ -19,6 +20,7 @@
     transition: width 0.3s ease; /* Makes resizing smoother */
     position: relative;
     left: 30px;
+    z-index: 2;
 }
 .logo img:hover {
     width: 180px; /* Logo expands on hover */
@@ -30,6 +32,7 @@
     align-items: center;
     margin-left: auto; /* Pushes search bar to the right */
     font-size: larger;
+    z-index: 2;
 }
 .search-bar {
     width: 160px; /* shorter width initially */
