--- a/4CADs.css
+++ b/4CADs.css
@@ -120,6 +120,7 @@ header {
 
 .level-text{
     transition: opacity 0.7s ease;
+    opacity: 1;
 }
 .level-text:hover{
     opacity: 0;
@@ -196,7 +197,8 @@ footer {
     color: #000;
 }
 .footermage{
-    
+    display: flex;
+    justify-content: center;
     width: 200px;
 }
 .backvideo{
