--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -5,7 +5,7 @@
 }
 body {
     font-family:sans-serif;
-    background-color: #ddd650;
+    background-color: #373434;
     text-align: center;
     font-weight: bold;
     z-index: 9;
