--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -100,8 +100,8 @@ h2 {
     justify-content: space-evenly;
 }
 
-.CONCRETE {
-    background-image: url(Concrete.jpg);
+.WOOD {
+    background-image: url(/Images/Wood.png);
     background-size: cover;
     width: 300px;
     height: 300px;
@@ -163,8 +163,8 @@ h2 {
     font-weight: bold;
 }
 
-.WOOD {
-    background-image: url(Wood.jpg);
+.CONCRETE {
+    background-image: url(Concrete.jpg);
     width: 300px;
     height: 300px;
     background-color: white;
@@ -195,7 +195,7 @@ h2 {
 
 a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 #background{
