--- a/Materials Page/Material Content/wood.css
+++ b/Materials Page/Material Content/wood.css
@@ -1,27 +1,101 @@
-.container{
-    width: 700px;
-    height: 500px;
-    background-color: rgb(205, 217, 221);
-    text-align: center;
-    border: rgb(52, 63, 63) solid 2px;
-    position: absolute;
-    left: 1px;
-    background-image: url(iStock-11379962072.jpg);
-    background-size:contain;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color:#f2f2f0;
+    width: 100%;
+    height: 70px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+/* Logo Styling */
+.logo img {
+    width: 150px; 
+    transition: width 0.3s ease; /* Makes resizing smoother */
+    position: relative;
+    left: 30px;
+}
+.logo img:hover {
+    width: 180px; /* Logo expands on hover */
     
 }
-
-#woodtittle{
-    text-align: center;
-    text-decoration: underline;
+/* Search Container Styling */
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Pushes search bar to the right */
+    font-size: larger;
+}
+.search-bar {
+    width: 160px; /* shorter width initially */
+    height: 43px;
+    padding: 5px;
+    border: 1px solid #b0ae87;
+    border-radius: 40px;
+    transition: width 0.5s ease;
+    background-color: #ffffff;
+    position: relative;
+    left: 90px;
+    
+}
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
+.search-icon {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    left:12px ;
+    top: 3.5px;
+    z-index: 1;
+}
+.search-bar:focus {
+    width: 700px; /* then it expans on focus, as in when clicked*/
+    outline: none;
 }
 
-#descriptiontittle{
+.image{
+    width: 550px;
+    height: 550px;
+    text-align: center;
+    position: relative;
+    border: #b0ae87 ridge 3.5px;
+    border-radius: 5px;
+    margin: 30px;
+    background-image: url(/Images/Wood.png);
+    background-size:cover;
+}
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position: relative;
+    bottom: 400px;
+    justify-content: space-evenly;
+}
+#woodtitle{
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+    font-family:sans-serif;
+}
+
+#descriptiontitle{
     text-decoration: underline;
+    font-family:sans-serif;
 }
 .description{
     Width:900px;
-    height: 220px;
+    height: 150px;
     position: absolute;
     right: 30px;
     background-color: rgb(205, 217, 221);
@@ -29,7 +103,9 @@
     padding-left: 30px;
     padding-right: 30px;
     border: 2px rgb(52, 63, 63) solid;
-}
+    font-family:sans-serif;
+    
+}   
 
 #text1{
     text-align:justify;
@@ -46,11 +122,12 @@
     padding-left: 30px;
     padding-right: 30px;
     border: 2px rgb(52, 63, 63) solid;
-    top:235px;
+    top: 100px;
 }
 
 #application{
     text-decoration: underline;
+    font-family: sans-serif;
 }
 
 .Properties{
@@ -60,7 +137,7 @@
     background-color: rgb(205, 217, 221);
     text-align: start;
     position: absolute;
-    top:392px;
+    top: 280px;
     right: 30px;
     padding-left: 30px;
     padding-right: 30px;
@@ -81,5 +158,5 @@
     padding-left: 30px;
     padding-right: 30px;
     border: 2px rgb(52, 63, 63) solid;
-    top:550px;
+    top: 450px;
 }
