--- a/4CADs.css
+++ b/4CADs.css
@@ -7,13 +7,15 @@
     display: flex;
     align-items: center;
     padding: 20px;
-    background-color:#f2f2f0;
+    background-color:#ffffff;
     width: 100%;
     height: 70px;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 0.8s;
+    transition:  1s ease;
 }
+
 /* Logo Styling */
 .logo img {
     width: 150px; 
@@ -26,6 +28,30 @@
     width: 180px; /* Logo expands on hover */
     
 }
+
+.divabout{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.aboutus{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    font-weight:lighter;
+    font-family: sans-serif;
+    font-size: medium;
+    transition: 0.5s ease;
+    position: relative;
+    left: 60px;
+}
+
+.aboutus:hover{
+color: #35330d;
+}
+
 /* Search Container Styling */
 .search-container {
     display: flex;
@@ -174,7 +200,7 @@ header {
 }
 
 footer {
-    background-color: #f2f2f0;
+    background-color: #ffffff;
     padding: 15px;
     display: flex;
     text-align: right;
@@ -182,9 +208,13 @@ footer {
     font-family: Arial, sans-serif;
     font-size: 16px;
     width: 100%;
+    height: 70px;
     margin-top: 30px;
     justify-content: space-between;
-    
+    transition: 0.5s ease;
+}
+.footer:hover{
+    background-color:#f2f2f0 ;
 }
 
 .ParaImage{
