--- a/Materials Page/Material Content/wood.css
+++ b/Materials Page/Material Content/wood.css
@@ -12,7 +12,51 @@
     height: 70px;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 3s;
+    transition:  1s ease;
+}
+.navbar:hover{
+    background-color:#ffffff;
+}
+/* Logo Styling */
+.logo img {
+    width: 150px; 
+    transition: width 0.3s ease; /* Makes resizing smoother */
+    position: relative;
+    left: 30px;
+}
+.logo img:hover {
+    width: 180px; /* Logo expands on hover */
+    
+}
+.divabout{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.aboutus{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    font-weight:lighter;
+    font-family: sans-serif;
+    font-size: medium;
+    transition: 0.5s ease;
+    position: relative;
+    left: 60px;
+}
+
+.aboutus:hover{
+color: #35330d;
+}
+/* Search Container Styling */
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Pushes search bar to the right */
+    font-size: larger;
 }
 /* Logo Styling */
 .logo img {
@@ -159,4 +203,43 @@
     padding-right: 30px;
     border: 2px rgb(52, 63, 63) solid;
     top: 450px;
+}
+footer {
+    background-color: #ffffff;
+    padding: 15px;
+    display: flex;
+    text-align: right;
+    color: rgb(0, 0, 0);
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 70px;
+    margin-top: 30px;
+    justify-content: space-between;
+    transition: 0.5s ease;
+}
+.footer:hover{
+    background-color:#f2f2f0 ;
+}
+.ParaImage{
+    display: flex; 
+    height: 50px;
+    gap: 30px;
+    display: flex;
+    
+}
+.contact-pics{
+    display: flex;
+    align-items: center;
+    color: #000;
+}
+.footermage{
+    display: flex;
+    justify-content: center;
+    width: 200px;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
 }
