--- a/4CADs.css
+++ b/4CADs.css
@@ -243,4 +243,19 @@ footer {
 }
 a{
     text-decoration: none;
+    color: bl;
+}
+
+.Aboutfooter{
+    display: flex;
+    align-items: center;
+    bottom: 0;
+    position: fixed;
+}
+
+.Aus{
+    color: rgb(87, 87, 87);
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
 }
