--- a/About_us.css
+++ b/About_us.css
@@ -1,32 +1,244 @@
+/* Basic Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color:#f2f2f1;
+    width: 100%;
+    height: 70px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    transition:  1s ease;
+}
+
+/* Logo Styling */
+.logo img {
+    width: 150px; 
+    transition: width 0.3s ease; /* Makes resizing smoother */
+    position: relative;
+    left: 30px;
+    z-index: 2;
+}
+.logo img:hover {
+    width: 180px; /* Logo expands on hover */
+    
+}
+
+.divabout{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.aboutus{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-weight:lighter;
+    font-family: sans-serif;
+    font-size: medium;
+    transition: 0.5s ease;
+    position: relative;
+    left: 60px;
+    background-color: #6d6a39;
+    opacity: 0.8;
+    border-radius: 12px;
+    font-weight: bolder;
+    width: 100px; height: 20px;
+    transition: all ease 0.3;
+}
+
+.aboutus:hover{
+
+    font-size: 15px;
+    opacity: 0.7;
+}
+
+/* Search Container Styling */
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto; /* Pushes search bar to the right */
+    font-size: larger;
+    z-index: 2;
+}
+.search-bar {
+    width: 160px; /* shorter width initially */
+    height: 43px;
+    padding: 5px;
+    border: 1px solid #6d6a39 ;
+    opacity: 0.8;
+    border-radius: 40px;
+    transition: width 0.5s ease;
+    background-color: #ffffff;
+    position: relative;
+    left: 90px;
+    
+}
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
+.search-icon {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    left:12px ;
+    top: 3.5px;
+    z-index: 1;
+}
+.search-bar:focus {
+    width: 700px; /* then it expans on focus, as in when clicked*/
+    outline: none;
+}
 body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+header {
+    background-color: #837a1c;
+   
+    color: #fff;
+    width: 100%;
+    height: 70px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    position: sticky ;
+    top: 70px;
+    z-index: 1;
+}
+#aboutus_title{
+    position: relative;
+    right: 680px;
+    display: flex;
+    top: 0px;
+}
+h1 {
+    font-size: 2rem;
+    
+    bottom: 10px;
+    position: relative;
+    right: 10px;
+}
+#welcome{
+    position: relative;
+    right: 0px;
+}
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    text-align: center;
+}
+
+.Aboutimg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; /* Adjust width as needed */
+    max-width: 800px; /* Limit maximum width */
+    height: 450px;
+    border-radius: 30px;
+    background-size: cover;
+    background-image: url('Images/HCAD Building.png'); /* Your relative image path */
+    margin-bottom: 30px;
+}
+
+.Aboutp {
+    padding: 30px 20px;
+    font-size: 1.25rem;
+    line-height: 1.8rem;
+    max-width: 800px;
+    border: #3c3807 solid;
+}
+.majors {
+    text-align: center;
+    margin-top: 50px;
+    display: flex;
+
+}
+
+.majors h2 {
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+.image-links {
+    display: flex;
+    justify-content: space-evenly;  /* Space images evenly */
+    align-items: center;
+    width: 100%;
+    margin-top: 0px;
+}
+
+.image-box {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-h1{
-    color: rgb(87, 87, 87);
+.major-image {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 15px;
+    transition: transform 0.3s ease-in-out;
+    margin: 10px;
+}
+
+.major-image:hover {
+    transform: scale(1.1);
+}
+
+.image-name {
+    margin-top: 10px;
+    font-size: 1.2rem;
     font-weight: bold;
-    text-align: center;
-    margin-top: 50px;
-    font-size: 70px;
+    color: #333;
 }
 
-.Aboutp{
-    padding: 30px 150px; /*Change the 300 according to the amount of text*/ 
-    text-align: center;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    margin: 0px;
-}
-
-.Aboutimg{
+footer {
+    background-color: #ffffff;
+    padding: 15px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 30px;
-    width: 600px;
-    height: 400px;
+    text-align: right;
+    color: rgb(0, 0, 0);
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 70px;
+    margin-top: 30px;
+    justify-content: space-between;
+    transition: 0.5s ease;
+    position: sticky;
+}
+.footer:hover{
+    background-color:#f2f2f0 ;
+}
+.ParaImage{
+    display: flex; 
+    height: 50px;
+    gap: 30px;
+    display: flex;
+    
 }
 .contact-pics{
     display: flex;
@@ -36,16 +248,15 @@ h1{
 .footermage{
     display: flex;
     justify-content: center;
-    width:
-    position: relative;
-    right: 60px;
+    width: 200px;
 }
+
 .footer{
     display: flex;
     align-items: center;
-    position: relative;
-    top: 500px;
+    width: 100vw;
 }
-.footer:hover{
-    background-color:#f2f2f1 ;
+a{
+    text-decoration: none;
+    color: #fff;
 }
