--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -7,47 +7,34 @@ body {
     font-family:sans-serif;
     background-color: #ffffff;
     text-align: center;
-    font-weight: bold;
-    z-index: 9;
-}
-.beginnertitle{
-
-    font-family:sans-serif;
-    color: rgb(255, 255, 255);
-    width: 100vw;
-    background-color: #ffffff;
-    border: #000000 5px solid;
-    display: inline;
-    position: sticky 0px;
-    bottom: 20px;
-    z-index: -1;
+    z-index: 2;
 }
 .navbar {
     display: flex;
     align-items: center;
     padding: 20px;
-    background-color:#f2f2f0;
+    background-color:#f2f2f1;
     width: 100%;
     height: 70px;
     position: sticky;
     top: 0;
-    z-index: 0.8s;
+    z-index: 2;
     transition:  1s ease;
 }
-.navbar:hover{
-    background-color:#ffffff;
-}
+
 /* Logo Styling */
 .logo img {
     width: 150px; 
     transition: width 0.3s ease; /* Makes resizing smoother */
     position: relative;
     left: 30px;
+    z-index: 2;
 }
 .logo img:hover {
     width: 180px; /* Logo expands on hover */
     
 }
+
 .divabout{
     width: 100%;
     display: flex;
@@ -58,30 +45,41 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000000;
+    color: #ffffff;
     font-weight:lighter;
     font-family: sans-serif;
     font-size: medium;
     transition: 0.5s ease;
     position: relative;
     left: 60px;
+    background-color: #6d6a39;
+    opacity: 0.8;
+    border-radius: 12px;
+    font-weight: bolder;
+    width: 100px; height: 20px;
+    transition: all ease 0.3;
 }
 
 .aboutus:hover{
-color: #35330d;
+
+    font-size: 15px;
+    opacity: 0.7;
 }
+
 /* Search Container Styling */
 .search-container {
     display: flex;
     align-items: center;
     margin-left: auto; /* Pushes search bar to the right */
     font-size: larger;
+    z-index: 2;
 }
 .search-bar {
     width: 160px; /* shorter width initially */
     height: 43px;
     padding: 5px;
-    border: 1px solid #b0ae87;
+    border: 1px solid #6d6a39 ;
+    opacity: 0.8;
     border-radius: 40px;
     transition: width 0.5s ease;
     background-color: #ffffff;
@@ -107,17 +105,47 @@ color: #35330d;
     width: 700px; /* then it expans on focus, as in when clicked*/
     outline: none;
 }
-
-.container {
-    margin-top: 50px;
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
+header {
+    background-color: #837a1c;
+   
+    color: #fff;
+    width: 100%;
+    height: 70px;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    position: sticky ;
+    top: 70px;
+    z-index: 1;
+}
+#beginner_title{
+    position: relative;
+    right: 680px;
+    display: flex;
+    top: 0px;
+}
+a{
+    text-decoration: none;
+    color: #000000;
+}
 h1 {
-    font-size: 24px;
-    font-weight: bold;
-    font-family: sans-serif;
+    font-size: 2rem;
+    
+    bottom: 10px;
+    position: relative;
+    right: 10px;
 }
-
 h2 {
     font-size: 18px;
     font-weight: normal;
@@ -230,10 +258,7 @@ h2 {
     font-weight: bold;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-}
+
 
 #background{
     position: absolute;
@@ -272,17 +297,16 @@ footer {
     display: flex;
     
 }
-.contact-pics{
-    display: flex;
-    align-items: center;
-    color: #000;
-}
+
 .footermage{
     display: flex;
     justify-content: center;
     width: 200px;
 }
-
+.contactus{
+    color:#000;
+    text-decoration: underline;
+}
 .footer{
     display: flex;
     align-items: center;
