--- a/Materials Page/BEGINNER.css
+++ b/Materials Page/BEGINNER.css
@@ -60,7 +60,7 @@ h2 {
     width: 100%;
     height: 100%;
    
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     transition: filter 0.3s ease;
 }
@@ -94,6 +94,7 @@ h2 {
     transform: translateY(20px);
     transition: all 0.3s ease;
     max-width: 250px;
+    display: flex;
 }
 
 .card:hover {
@@ -262,7 +263,7 @@ h2 {
 
 .BASSWOOD {
     background-image: url(/Images/Basswood.png);
-    background-size: cover;
+    background-size:cover;
     width: 360px;
     height: 360px;
     background-color: white;
